添加album的node接口

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 
 # IDE - VSCode
 .vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -41,3 +42,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#node_modules
+node_modules/
+node_modules/*
