--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "ng-zorro-antd": "^0.6.13",
     "rxjs": "^5.5.6",
+    "sequelize": "^4.33.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
